--- a/login.html
+++ b/login.html
@@ -50,6 +50,6 @@
             const app = firebase.initializeApp(firebaseConfig);
           </script>
     
-        <script src="js/login.js" />
+        <script src="js/login.js"></script>
   </body>
 </html>
