--- a/gallery.html
+++ b/gallery.html
@@ -81,6 +81,6 @@
             const app = firebase.initializeApp(firebaseConfig);
           </script>
     
-        <script src="js/index.js" />
+        <script src="js/index.js"></script>
   </body>
 </html>
