Changes in Login and SignUp page with validation

--- a/gallery.html
+++ b/gallery.html
@@ -56,9 +56,8 @@
 
 
     <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
-    <!-- Firebase App is always required and must be first -->
         <script src="https://www.gstatic.com/firebasejs/9.6.8/firebase-app-compat.js"></script>
-        <!-- Add additional services you want to use -->
+        <!-- Adding additional services-->
         <script src="https://www.gstatic.com/firebasejs/9.6.8/firebase-auth-compat.js"></script>
         <script src="https://www.gstatic.com/firebasejs/9.6.8/firebase-firestore-compat.js"></script>
         <script src="https://www.gstatic.com/firebasejs/9.6.8/firebase-storage-compat.js"></script>
