--- a/index.html
+++ b/index.html
@@ -4,10 +4,9 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Welcome to Firebase Hosting</title>
-
-    <!-- update the version number as needed -->
+    
     <script defer src="/__/firebase/9.6.8/firebase-app-compat.js"></script>
-    <!-- include only the Firebase features as you need -->
+    <!-- including Firebase features -->
     <script defer src="/__/firebase/9.6.8/firebase-auth-compat.js"></script>
     <script defer src="/__/firebase/9.6.8/firebase-database-compat.js"></script>
     <script defer src="/__/firebase/9.6.8/firebase-firestore-compat.js"></script>
@@ -50,7 +49,7 @@
     <script>
       document.addEventListener('DOMContentLoaded', function() {
         const loadEl = document.querySelector('#load');
-        // // 🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥
+        //
         // // The Firebase SDK is initialized and available here!
         //
         // firebase.auth().onAuthStateChanged(user => { });
@@ -63,7 +62,6 @@
         // firebase.analytics().logEvent('tutorial_completed');
         // firebase.performance(); // call to activate
         //
-        // // 🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥
 
         try {
           let app = firebase.app();
