minor changes in login page

--- a/login.html
+++ b/login.html
@@ -25,10 +25,10 @@
           <span></span>
           <label>Confirm Password</label>
         </div>
-        <input type="submit" value="Login" id="submitbutton" class="login">
+        <input type="submit" value="Log In" id="submitbutton" class="login">
         <div class="pass">Forgot Password?</div>
         <div class="signup_link">
-          <p>Not a member?</p> <a href="javascript: void(0)" id="signupButton" class="signupbut">Signup</a>
+          <p>Not a member?</p> <a href="javascript: void(0)" id="signupButton" class="signupbut">Sign Up</a>
         </div>
       </form>
     </div>
