--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <script>
-      window.location.href = '/gallery.html'; 
+      window.location.href = '../gallery.html'; 
     </script>
   </body>
 </html>
