--- a/gallery.html
+++ b/gallery.html
@@ -11,8 +11,8 @@
     <div class="navbar">
         <h1>Photo Stash</h1>
         <ul>
-          <li> <a href="http:#">HOME</a></li>
-          <li> <a href="http:#">ABOUT</a> </li>
+          <li> <a href="#">HOME</a></li>
+          <li> <a href="#">ABOUT</a> </li>
           <li> <a href="" class="logout">Logout</a></li>
         </ul>
       </div>
