--- a/gallery.html
+++ b/gallery.html
@@ -9,19 +9,30 @@
   </head>
   <body>
     <div class="navbar">
-        <h1>Photo Stash</h1>
+        <h1 class="logo">PhotoStash</h1>
         <ul>
-          <li> <a href="http:#">HOME</a></li>
-          <li> <a href="http:#">ABOUT</a> </li>
+          <li> <a href="http:#">Home</a></li>
+          <li> <a href="http:#">About</a> </li>
           <li> <a href="" class="logout">Logout</a></li>
         </ul>
       </div>
-    <div class="wrap">
+      <div class="heading">
+       <h2> Your Gallery </h2>
+      </div>
+      <div class="wrap">
+      </div>
 
-       </div>
-       <button data-toggle="modal" data-target="#modalLoginForm" class="plus"></button>
+      <div id="myModal1" class="modal1">
+        <span class="closebut">&times;</span>
+        <img class="modal-content-img" id="img001">
+        <div id="captiontext"></div>
+      </div>
 
-       <div class="modal fade" id="modalLoginForm" tabindex="-1" role="dialog" aria-labelledby="myModalLabel"
+
+
+      <button data-toggle="modal" data-target="#modalLoginForm" class="plus"></button>
+
+      <div class="modal fade" id="modalLoginForm" tabindex="-1" role="dialog" aria-labelledby="myModalLabel"
   aria-hidden="true">
   <div class="modal-dialog" role="document">
     <div class="modal-content">
