--- a/gallery.html
+++ b/gallery.html
@@ -15,13 +15,8 @@
     <div class="navbar">
       <h1 class="logo">PhotoStash</h1>
       <ul>
-        <li><a href="#">HOME</a></li>
-        <li><a href="#">ABOUT</a></li>
-        <li><a href="" class="logout">Logout</a></li>
-      </ul>
-      <ul>
-        <li><a href="#">HOME</a></li>
-        <li><a href="#">ABOUT</a></li>
+        <li><a href="#">Home</a></li>
+        <li><a href="#">About</a></li>
         <li><a href="" class="logout">Logout</a></li>
       </ul>
     </div>
