Adding Name in Sign Up, fix delete and magnify functionality and styling

--- a/login.html
+++ b/login.html
@@ -15,6 +15,11 @@
           <span></span>
           <label>Email</label>
         </div>
+        <div class="txt_field name">
+          <input type="text" name="name" required>
+          <span></span>
+          <label>Name</label>
+        </div>
         <div class="txt_field">
           <input type="password" name="password" required>
           <span></span>
