--- a/gallery.html
+++ b/gallery.html
@@ -15,6 +15,7 @@
     <div class="navbar">
       <h1 class="logo">PhotoStash</h1>
       <ul>
+        <li class="displayName">Name</li>
         <li><a href="#">Home</a></li>
         <li><a href="#">About</a></li>
         <li><a href="" class="logout">Logout</a></li>
