--- a/about.html
+++ b/about.html
@@ -15,70 +15,22 @@
     <div class="navbar">
       <h1 class="logo">PhotoStash</h1>
       <ul>
-        <li class="displayName" id="displayName"></li>
-        <li><a href="#">Home</a></li>
-        <li><a href="/about.html" class="openAbout">About</a></li>
+        <li class="displayName"></li>
+        <li><a href="/gallery.html">Home</a></li>
+        <li><a href="#" class="openAbout">About</a></li>
         <li><a href="" class="logout">Logout</a></li>
       </ul>
     </div>
     <div class="heading">
-      <h2>Your Gallery</h2>
+      <h2>About Us</h2>
     </div>
-    <div class="wrap"></div>
-
-    <div id="myModal1" class="modal1">
-      <span class="closebut">&times;</span>
-      <img class="modal-content-img" id="img001" />
-      <div id="captiontext"></div>
+    <div class="aboutText">
+        PhotoStash provides the main functionality of uploading the photos with file name and displaying them in the gallery.
+       Click on + Sign to upload a photo, which is at the bottom of the home page.
+       You can magnify the photos upon clicking on it and close it with a close sign.
+       If you want to delete the picture, please click on the delete button on the photo.
+       If Clicked on Logout, then the page will redirect to login pagin.
     </div>
-
-    <button
-      data-toggle="modal"
-      data-target="#modalLoginForm"
-      class="plus"
-    ></button>
-
-    <div
-      class="modal fade"
-      id="modalLoginForm"
-      tabindex="-1"
-      role="dialog"
-      aria-labelledby="myModalLabel"
-      aria-hidden="true"
-    >
-      <div class="modal-dialog" role="document">
-        <div class="modal-content">
-          <div class="modal-header text-center">
-            <h4 class="modal-title w-100 font-weight-bold">Upload photo</h4>
-            <button
-              type="button"
-              class="close"
-              data-dismiss="modal"
-              aria-label="Close"
-            >
-              <span aria-hidden="true">&times;</span>
-            </button>
-          </div>
-          <div class="modal-body mx-3">
-            <div class="md-form mb-5">
-              <i class="fas fa-envelope prefix grey-text"></i>
-              <input type="file" id="files" class="form-control validate" />
-              <label>Upload File</label>
-            </div>
-
-            <div class="md-form mb-4">
-              <i class="fas fa-lock prefix grey-text"></i>
-              <input type="text" id="fileName" class="form-control validate" />
-              <label>File Name</label>
-            </div>
-          </div>
-          <div class="modal-footer d-flex justify-content-center">
-            <button class="btn btn-default submitimage">Submit</button>
-          </div>
-        </div>
-      </div>
-    </div>
-
     <script
       src="https://code.jquery.com/jquery-3.6.0.min.js"
       integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="
@@ -112,7 +64,6 @@
       // Initialize Firebase
       const app = firebase.initializeApp(firebaseConfig);
     </script>
-
     <script src="js/index.js"></script>
   </body>
 </html>
