--- a/about.html
+++ b/about.html
@@ -16,7 +16,7 @@
       <h1 class="logo">PhotoStash</h1>
       <ul>
         <li class="displayName"></li>
-        <li><a href="/gallery.html">Home</a></li>
+        <li><a href="./gallery.html">Home</a></li>
         <li><a href="#" class="openAbout">About</a></li>
         <li><a href="" class="logout">Logout</a></li>
       </ul>
