--- a/gallery.html
+++ b/gallery.html
@@ -17,7 +17,7 @@
       <ul>
         <li class="displayName" id="displayName"></li>
         <li><a href="#">Home</a></li>
-        <li><a href="/about.html" class="openAbout">About</a></li>
+        <li><a href="./about.html" class="openAbout">About</a></li>
         <li><a href="" class="logout">Logout</a></li>
       </ul>
     </div>
